# ur10_control

./: CMakeLists.txt  README.md  package.xml
Prova/: Reame.txt  my_cloud.xyz  my_cloud_marcia.xyz  percorso.xyz  traj  traj_planning.c
QT/: manual_pose.ui  screen_automazione.ui  screen_joystick.ui  screen_main.ui  user_interface.py
launch/: init_manual_cloud.launch  init_polimi.launch  init_py.launch  robodk_init.launch
scripts/: UI_gara.py  camera_manual.py  collision_interface.py  control_py.py  control_robodk.py  force_sensor_test.py  from_direction_vet_to_rpy.py  manual_cloud.py  my_opencv.py  script_test_polimi.py
scripts/go_to_test/: go_to_std_position_to_read_obj.py  go_to_test_control_force.py
src/: handle_jacobian.cpp
